--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: flashcards-backend
+    name: backend
     env: node
     buildCommand: cd backend && npm install
     startCommand: cd backend && node server.js
